Tests/RunCMake/CMakePresets/JSONParseError-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/JSONParseError: JSON parse error$
